tests/ui/borrowck/issue-25793.stderr
error[E0503]: cannot use `self.width` because it was mutably borrowed
  --> $DIR/issue-25793.rs:4:9
   |
LL | / macro_rules! width(
LL | |     ($this:expr) => {
LL | |         $this.width.unwrap()
   | |         ^^^^^^^^^^^ use of borrowed `*self`
LL | |
LL | |     }
LL | | );
   | |__- in this expansion of `width!`
...
LL |           let r = &mut *self;
   |                   ---------- `*self` is borrowed here
LL |           r.get_size(width!(self))
   |             -------- ------------ in this macro invocation
   |             |
   |             borrow later used by call

error: aborting due to previous error

For more information about this error, try `rustc --explain E0503`.
